--- a/stylesheets/components/group.css
+++ b/stylesheets/components/group.css
@@ -12,7 +12,7 @@
     margin-left: var(--gap);
 }
 
-.group--gap--small > * + * {
+.group--gap-small > * + * {
     margin-left: var(--gap--small);
 }
 
